fix: update background color of divider in login component for better visibility

--- a/src/app/features/login/login.component.scss
+++ b/src/app/features/login/login.component.scss
@@ -1,5 +1,5 @@
 :host ::ng-deep .p-divider-content {
-  background-color: white !important;
+  background-color: rgba(255, 255, 255, 0) !important;
 }
 
 :host ::ng-deep .p-button-outlined {
